project/real2.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;

}
html {
  scroll-padding-top: 80px; 
  scroll-behavior: smooth;
          background-color: #0D0D0D;
  color: white;

}

hero {
  color: #fff;
  height: 100%;
  position: relative;
  overflow: hidden;
        background-color: #0D0D0D;

}
hero::before {
  content: "FRONTEND DEVELOPER FRONTEND DEVELOPER FRONTEND DEVELOPER ";
  position: absolute;
  top: 0;
  left: 0;
  width: 300%;
  height: 100%;
  font-size: 6rem;
  color: white;
  opacity: 0.05;
  white-space: nowrap;
  transform: rotate(-20deg);
  pointer-events: none;
  z-index: 1;
}
@media (max-width: 480px) {
hero::before {
  width: 100%;
  height: 100%;

}  
}
/* hr */
#about, #contact, #project, #about{
transition: 0.5s;
}


/* hr */

.head-nav{
    display: flex;
    justify-content: space-between;
    padding-block: 5px;
    padding-inline: 20px;
    position: fixed;
        width: 100%;
    z-index: 10;
    top: 0;
    bottom:10;


}
.nav-ul{
    display: flex;
    gap: 20px;
    margin-top: 10px;
}
.nav-ul a{
cursor: pointer;
}
ul a:hover{
color: darkseagreen;
}
.icon-nav{
    display: flex;
    gap: 20px;
    margin-top: 10px;

}
.img-nav{
    width: 200px;
    height: 40px;
    aspect-ratio: 1;
    display: flex;
    gap:10px;

}
.img-nav img{
    width: 20%;
    border-radius: 50px;
}


.links ul li::after{
    content: '';
    width: 0%;
    height: 2px;
    background: #eb8079;
    display: block;
margin: auto;
transition: 0.5s;
}
.links ul li:hover::after{
width: 100%;
}


#sidebar-active{
    display: none;
}
.open, .close{
    display: none;

}
.funmi{
  margin-top: 10px;
}
@media (max-width: 480px) {
    .links{
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        position: fixed;
        top:0;
        right: -100%;
        z-index: 10;
        width: 150px;
        padding-left: 20px;
        padding-bottom: 10px;
        background: rgb(38, 126, 97);
        box-shadow: -5px 0 5px rgba(0, 0, 0, 0.25);
        transition: 0.75s ease-out;

    }
    .nav-ul{
        display: flex;
        flex-direction: column;
    }
    .bar .set{
        box-sizing: border-box;
        height: auto;
        width: 100%;
        padding: 20px 30px;
        justify-content: flex-start;   
     }
 .close{
    padding-block:  20px;
    display: block;

}
.open{
    display: block;
    padding-top: 20px;
}
.show{
    display: inline-block;
    color: black;
    text-transform: lowercase;
}
#sidebar-active:checked ~ .links{
    right: 0;
}

#sidebar-active:checked ~ #overlay{
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    Z-index: 9;
}
.menu-bar{
    position: relative;
    right: 140px;
    bottom: 10px;
        color: #22c55e;
            transform: translateX(100px);
            font-size: 20px;

}
.img-nav{
    margin-left: 20px;
}
.head-nav{
    padding-inline: 5px;
padding-top: 10px;
 display: flex;
justify-content: space-between;
}
.icon-nav{
    margin-top: 10px;
}
    }

/* hr */
    #home{
    display: flex;
      gap:20px;
      justify-content: center; 
      margin-top: 100px;
      margin-bottom: 10px;

    }
    .butt{
        border:1px solid coral;
        border-radius: 20px;
        padding: 8px;
       color:coral;     
       display: flex;
       gap:5px;       
    }   
    .butt-i{
      color:coral;
    }
    .but{
                border:1px solid rgb(156, 15, 156);
        border-radius: 20px;
        padding: 8px;
       color:  rgb(156, 15, 156);
    }
   .home{display: flex;
        flex-direction: column; 
            position: relative;
    text-align: center;
          background: radial-gradient(circle at 20% 30%, rgba(255, 0, 0, 0.2), transparent 40%),
              radial-gradient(circle at 80% 70%, rgba(0, 255, 0, 0.2), transparent 40%),
              radial-gradient(circle at 50% 50%, rgba(0, 0, 255, 0.3), transparent 50%);
  backdrop-filter: blur(80px);

}
.home-detail, h1, h3, .parr{
    text-align: center;
    justify-self: center;
}
   .home-detail h1{
  font-size: 30px ;  
  margin-top: 50px;
}
.home-detail h1{
    display: inline-block;
    font-size: 1.3rem;

}
.parr{
  font-size: 0.5rem;
  opacity: 0.4;
  /* color:red; */
  width: 100px;
  justify-self: center;

}

.home-detail h1 span {
  position: relative;
  display: inline-block;
  color: transparent;
  -webkit-text-stroke: 0.07rem coral;
  animation: display-text 8s linear infinite;
  animation-delay: calc(-4s * var(--i));
}

@keyframes display-text {
  0%, 50% {
    display: none;
  }
}

.home-detail h1 span::before {
  content: attr(data-text);
  position: absolute;
  width: 0;
  border-right: 0.2rem solid coral;
  color: coral;
  white-space: nowrap;
  overflow: hidden;
  animation: fill-text 4s linear infinite;
}

@keyframes fill-text {
    10%, 100% {
        width: 0;
    }
    70%, 90%{
        width: 100%
    }
}

 .home-detail p{
    font-size: 1.6rem;
    margin: 1rem 0.25rem;
    width: 50%;
    align-items:  center;
 }
  .home-detail .btn-sci{
    display: flex;
    margin-top: 30px;
    justify-content: center;
  }
   .btn{
    background: coral;
    padding: 1rem 0.8rem;
    font-size: 10px;
    border-radius: 4rem;
    border: .2rem solid coral;
    font-weight: 500;
    transition: .5s;
   }
.btn:hover{
    background: transparent;
}
.sci{
    display: flex;
    gap: 2rem;
    margin-top: 0.5rem;
    margin-left: 20px;
    font-size: 10px;
}
.sci-top{
      display: flex;
    gap: 2rem;
    margin-top: 0.5rem;
    margin-left: 20px;
    font-size: 10px;

}
.four{
    border-radius: 50%;
    padding-inline: 5px;
    padding-block: 7px;
    background: coral;
    font-size: 20px;
 filter:grayscale(0);
 
}
@media (max-width: 480px) {
.sci-top{
  gap: 5px;
}
}
.four:hover{
filter: grayscale(100);
}
 
.move{
    margin-top: 50px;
    margin-bottom: 20px;
     display: inline-block;
  white-space: nowrap;
  animation: text 5s ease infinite;
}
/* ... */

